turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:4: error: integer number too large
    right(51,4285714286);
             ^